# qtlocationstatic

./: .cmake.conf  .gitmodules  buildscript.sh
src/: configure.cmake
src/location/: CMakeLists.txt
src/location/doc/src/plugins/: maplibregl.qdoc
src/location/maps/: qgeoroute.h
src/plugins/geoservices/: CMakeLists.txt
src/plugins/geoservices/maplibregl/: CMakeLists.txt  maplibregl.qrc  qgeomapmaplibregl.cpp  qgeomapmaplibregl.h  qgeomapmaplibregl_p.h  qgeomappingmanagerenginemaplibregl.cpp  qgeomappingmanagerenginemaplibregl.h  qgeoserviceproviderpluginmaplibregl.cpp  qgeoserviceproviderpluginmaplibregl.h  qmaplibreglstylechange.cpp  qmaplibreglstylechange_p.h  qsgmaplibreglnode.cpp  qsgmaplibreglnode.h
